deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: magic
  labels:
    app.kubernetes.io/name: magic
    app.kubernetes.io/part-of: magic
